DFR-2123: resolve the sonar issues (#1088)
* DFR-2123: address the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

* DFR-2123: resolve the sonar issues

---------

Co-authored-by: Mike Lemos <gobii@me.com>